--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,11 +20,27 @@ html{
     cursor: pointer;
   }
   img {
-    opacity: 0.7;
+    opacity: 1;
     width: 100%;
-    transition: opacity 0.7;
+    transition: opacity 0.7s;
+    filter: brightness(100%);
+    overflow: hidden;
+    position: relative;
+
     &:hover {
-      opacity: 1;
+      opacity: 0.7;
+      filter: brightness(70%);
+    }
+
+    &:hover::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.3);
+      z-index: 1;
     }
   }
 
@@ -33,17 +49,17 @@ html{
   }
 }
 
-// .no-hidden{
-//   position: fixed;
-//   bottom: 10px;
-//   right: 10px;
-//   visibility: visible;
-// }
+.no-hidden{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  visibility: visible;
+}
 
-// @media(max-width:570px){
-//   .card{
-//     img{
-//       opacity: 1;
-//     }
-//   }
-// }
+@media(max-width:570px){
+  .card{
+    img{
+      opacity: 1;
+    }
+  }
+}
