--- a/src/app/components/pages/characters/character-list/character-list.component.html
+++ b/src/app/components/pages/characters/character-list/character-list.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-dark">Rick and Morty</h2>
 <div class="row" infinite-scroll (scrolled)="onScrollDown()">
   <div class="col-xs-12-col-sm-6 col-md-4" *ngFor="let character of characters">
     <app-character [character]="character"></app-character>
