--- a/src/app/components/pages/heroes/heroes/heroes.component.html
+++ b/src/app/components/pages/heroes/heroes/heroes.component.html
@@ -1,4 +1,5 @@
 <h2 class="text-dark">Favorite Characters</h2>
+<div>
 <div class="container">
   <div class="form-group">
     <label for="new-hero">Character name:</label>
@@ -34,6 +35,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 
 
